--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,5 +1,5 @@
 <p class="text-muted credits">
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}<br>
+  Copyright &copy; 2012-{{ site.time | date: "%Y" }} - {{ site.author }}<br>
   <small>
       <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>,
       <span class="credit">customized with <a href="https://github.com/kAworu/octostrap3">octostrap3</a></span>.
