Update about material

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,7 @@
 <section>
-  <h1>About Noah</h1>
-  <p>A little something about me.</p>
+  <p><a href="/about.html">About me</a></p>
+
+  <p><a href="http://static.angelbob.com/portfolio">Online Portfolio</a></p>
+
+  <p><a href="http://twitter.com/codefolio"> <img src="/images/tw.png" alt="twitter icon" /> </a></p>
 </section>
