--- a/source/_includes/disqus.html
+++ b/source/_includes/disqus.html
@@ -6,6 +6,7 @@
         {% comment %} `page.comments` can be only be set to true on pages/posts, so we embed the comments here. {% endcomment %}
         // var disqus_developer = 1;
         var disqus_identifier = '{% if page.meta.disqus_id %}{{ page.meta.disqus_id }}{% else %}{{ site.url }}{{ page.url }}{% endif %}';
+        var disqus_url = disqus_identifier;
         var disqus_script = 'embed.js';
       {% else %}
         {% comment %} As `page.comments` is empty, we must be on the index page. {% endcomment %}
