Add hand-drawn art, mailing list signup and minor changes.

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -32,5 +32,5 @@
     </footer>
   {% endif %}
 {% else %}
-<div class="entry-content clearfix">{{ content }}</div>
+<div class="entry-content clearfix">{{ content }}{% include mailing_list_signup.html %}</div>
 {% endif %}
