--- a/source/_includes/custom/asides/rebuilding_signup.html
+++ b/source/_includes/custom/asides/rebuilding_signup.html
@@ -1,13 +1,3 @@
 <section>
-      <!-- Begin MailChimp Signup Form -->
-      <div class="well" id="mc_embed_signup">
-      <form action="http://rebuilding-rails.us2.list-manage.com/subscribe/post?u=c5569fb6471a3e64be2aa1466&amp;id=82afd59934" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <label for="mce-EMAIL">Free Email Rails Class?
-          <a href="http://rebuilding-rails.com">Two Free Chapters</a>? Announcements?</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email address" required>
-        <div class="clear"><input type="submit" class="btn btn-primary" value="Yeah, I Want That"
-                   name="subscribe" id="mc-embedded-subscribe" class="button btn-primary btn-large"></div>
-              Your first message has a download URL.
-      </form>
-      </div>
+  {% include mailing_list_signup.html %}
 </section>
