--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -6,7 +6,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ root_url }}/">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ root_url }}/">
+              {% img /images/Codefolio_text_100.png 100 47 'Codefol.io' 'A paper-cutout Codefol.io logo' %} </a>
         </div>
 
         <div class="navbar-collapse collapse">
