Make 'I Want That' button green.

--- a/source/_includes/mailing_list_signup.html
+++ b/source/_includes/mailing_list_signup.html
@@ -5,7 +5,7 @@
     <a href="http://rebuilding-rails.com">Two Free Chapters</a>? Announcements?</label>
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email address" required>
   <div class="clear"><input type="submit" class="btn btn-primary" value="Yeah, I Want That!"
-             name="subscribe" id="mc-embedded-subscribe" class="button btn-primary btn-large"></div>
+             name="subscribe" id="mc-embedded-subscribe" class="button btn-success btn-large"></div>
         Your first message has a download URL.
 </form>
 </div>
