--- a/source/_includes/mailing_list_signup.html
+++ b/source/_includes/mailing_list_signup.html
@@ -4,8 +4,8 @@
   <label for="mce-EMAIL">Free Email Rails Class?
     <a href="http://rebuilding-rails.com">Two Free Chapters</a>? Announcements?</label>
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email address" required>
-  <div class="clear"><input type="submit" class="btn btn-primary" value="Yeah, I Want That!"
-             name="subscribe" id="mc-embedded-subscribe" class="button btn-success btn-large"></div>
+  <div class="clear"><input type="submit" class="btn btn-success" value="Yeah, I Want That!"
+             name="subscribe" id="mc-embedded-subscribe" class="button btn-large"></div>
         Your first message has a download URL.
 </form>
 </div>
