--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -1,4 +1,5 @@
 <script src="{{ root_url }}/javascripts/libs/bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
+<script src="{{ root_url }}/javascripts/lightbox-2.6/js/lightbox-2.6.min.js"></script>
 <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
 {% include disqus.html %}
 {% include facebook_like.html %}
