--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,4 @@
 <link href="{{ root_url }}/javascripts/libs/bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="{{ root_url }}/javascripts/libs/bootstrap-3.0.0/dist/css/bootstrap-readable.min.css" rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/javascripts/lightbox-2.6/css/lightbox.css" rel="stylesheet" type="text/css">
 <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
