--- a/source/_includes/mailing_list_signup.html
+++ b/source/_includes/mailing_list_signup.html
@@ -1,7 +1,7 @@
 <!-- Begin MailChimp Signup Form -->
 <div class="well" id="mc_embed_signup">
 <form action="http://rebuilding-rails.us2.list-manage.com/subscribe/post?u=c5569fb6471a3e64be2aa1466&amp;id=82afd59934" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<h3>Free Email Rails Class? <a href="http://rebuilding-rails.com">Two Free Chapters</a>? Announcements?</h3>
+	<h3>Free Email Rails Class? <a href="http://rebuilding-rails.com">Two Free Chapters</a>? News?</h3>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
