Add explanation of mailing list signup form.

--- a/source/_includes/mailing_list_signup.html
+++ b/source/_includes/mailing_list_signup.html
@@ -1,5 +1,7 @@
 {% if page.signup == "deploy" %}
 
+<h3>Free Email Deploy Class?</h3>
+
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
