--- a/source/_includes/aside_list_signup.html
+++ b/source/_includes/aside_list_signup.html
@@ -1,6 +1,4 @@
-{% if page.signup == null or page.signup == "deploy" %}
-
-<h3>Want Free Ruby Deploy Lessons?</h3>
+<h3>Free Ruby Deploy Stuff?</h3>
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
@@ -224,32 +222,3 @@ function mce_success_cb(resp){
 
 </script>
 <!--End mc_embed_signup-->
-
-
-{% elsif page.signup == null or page.signup == "rebuilding" %}
-<!-- Begin MailChimp Signup Form -->
-<div class="well" id="mc_embed_signup">
-<form action="http://rebuilding-rails.us2.list-manage.com/subscribe/post?u=c5569fb6471a3e64be2aa1466&amp;id=82afd59934" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<h3>Free Email Rails Class? <a href="http://rebuilding-rails.com">Two Free Chapters</a>? News?</h3>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_c5569fb6471a3e64be2aa1466_82afd59934" value=""></div>
-	<div class="clear"><input type="submit" value="I Want That!" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-lg btn-success"></div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-{% else %}
-
-<div>
-  You found a problem with the page!
-</div>
-
-{% endif %}
