--- a/source/_includes/aside_list_signup.html
+++ b/source/_includes/aside_list_signup.html
@@ -1,4 +1,4 @@
-<h3>Free Ruby Deploy Stuff?</h3>
+<h3>Free Email Rails Class? <a href="http://rebuilding-rails.com">Free Chapters</a>? News?</h3>
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
@@ -8,7 +8,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
-<form action="http://rebuilding-rails.us2.list-manage2.com/subscribe/post?u=c5569fb6471a3e64be2aa1466&amp;id=bc7e08f416" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" role="form" novalidate>
+<form action="http://rebuilding-rails.us2.list-manage2.com/subscribe/post?u=c5569fb6471a3e64be2aa1466&amp;id=82afd59934" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" role="form" novalidate>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -23,12 +23,12 @@
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_c5569fb6471a3e64be2aa1466_bc7e08f416" tabindex="-1" value=""></div>
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_c5569fb6471a3e64be2aa1466_82afd59934" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="I Want That!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
 </div>
 <lead>
-  You'll also hear about my <a href="https://github.com/noahgibbs/madscience">free deployment software</a> and paid class.
+  You'll hear about a variety of Ruby topics, including my books.
 </lead>
 <script type="text/javascript">
 var fnames = new Array();var ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';
@@ -95,7 +95,7 @@ function mce_init_form(){
       var options = { errorClass: 'mce_inline_error', errorElement: 'div', onkeyup: function(){}, onfocusout:function(){}, onblur:function(){}  };
       var mce_validator = $("#mc-embedded-subscribe-form").validate(options);
       $("#mc-embedded-subscribe-form").unbind('submit');//remove the validator so we can get into beforeSubmit on the ajaxform, which then calls the validator
-      options = { url: 'http://rebuilding-rails.us2.list-manage.com/subscribe/post-json?u=c5569fb6471a3e64be2aa1466&id=bc7e08f416&c=?', type: 'GET', dataType: 'json', contentType: "application/json; charset=utf-8",
+      options = { url: 'http://rebuilding-rails.us2.list-manage.com/subscribe/post-json?u=c5569fb6471a3e64be2aa1466&id=82afd59934&c=?', type: 'GET', dataType: 'json', contentType: "application/json; charset=utf-8",
                     beforeSubmit: function(){
                         $('#mce_tmp_error_msg').remove();
                         $('.datefield','#mc_embed_signup').each(
