New big post, various edits

--- a/source/_includes/aside_list_signup.html
+++ b/source/_includes/aside_list_signup.html
@@ -28,7 +28,7 @@
 </form>
 </div>
 <lead>
-  You'll hear about a variety of Ruby topics, including my books.
+  You'll hear about a variety of Ruby and Rails topics, including my books.
 </lead>
 <script type="text/javascript">
 var fnames = new Array();var ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';
