--- a/source/_includes/mailing_list_signup.html
+++ b/source/_includes/mailing_list_signup.html
@@ -29,7 +29,7 @@
 </form>
 </div>
 <lead>
-  You'll also hear about my <a href="https://github.com/noahgibbs/madscience">free deployment software</a> and paid class.
+  You'll hear about Ruby on Rails internals, database migrations and whatever Rails programmers can benefit from.
 </lead>
 <script type="text/javascript">
 var fnames = new Array();var ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';
