Update Codefolio logo and favicon

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ root_url }}/">
-              {% img /images/Codefolio_text_100.png 100 47 'Codefol.io' 'A paper-cutout Codefol.io logo' %} </a>
+              {% img /images/codefolio_book_transparent_160_102.png 160 102 'Codefol.io' 'A Codefol.io logo book cover' %} </a>
         </div>
 
         <div class="navbar-collapse collapse">
